samples/_failures_safe/1761788084_ada1f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c4b64bf.c: In function ‘main’:
./samples/SAFE/__tmp_4c4b64bf.c:173:5: error: expected expression at end of input
  173 |     if (fgets(input, sizeof(input), stdin) == NULL)
      |     ^~
./samples/SAFE/__tmp_4c4b64bf.c:173:5: error: expected declaration or statement at end of input
